--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icon-cloud": "^4.1.3",
+    "react-icons": "^4.4.0",
+    "simple-icons": "^7.1.0",
+    "spinners-react": "^1.0.7",
+    "three": "^0.141.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.17.0",
