--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@react-three/drei": "^9.13.0",
+    "@react-three/fiber": "^8.0.23",
+    "@splinetool/loader": "^0.9.68",
+    "@splinetool/r3f-spline": "^1.0.1",
     "@splinetool/react-spline": "^2.2.1",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
