--- a/components/data/images/projects.json
+++ b/components/data/images/projects.json
@@ -2,6 +2,17 @@
 [
     {
       "logo": null,
+      "title": "Farhan's Portfolio",
+      "description":
+        "Personal portfolio made using NextJS , Chakra UI , Framer Motion",
+      
+      "live": "https://gregs-guestbook.vercel.app/",
+      "proto": null,
+      "repo": "https://github.com/gregogun/my-guestbook",
+      "id":3
+    },
+    {
+      "logo": null,
       "title": "Guestbook",
       "description":
         "My own personal guestbook which I invite you to sign! Created with Next.js + Prisma + Typescript + NextAuth for authentication. Inspired by Lee Robinson.",
@@ -9,8 +20,18 @@
       "live": "https://gregs-guestbook.vercel.app/",
       "proto": null,
       "repo": "https://github.com/gregogun/my-guestbook",
-      "id":1,
-      "feature": true
+      "id":1
+    },
+    {
+      "logo": null,
+      "title": "Guestbook",
+      "description":
+        "My own personal guestbook which I invite you to sign! Created with Next.js + Prisma + Typescript + NextAuth for authentication. Inspired by Lee Robinson.",
+      
+      "live": "https://gregs-guestbook.vercel.app/",
+      "proto": null,
+      "repo": "https://github.com/gregogun/my-guestbook",
+      "id":2
     }
   ]
 
