--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@splinetool/react-spline": "^2.2.1",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
+    "next-images": "^1.8.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icon-cloud": "^4.1.3",
