--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.1.0",
     "react-icon-cloud": "^4.1.3",
     "react-icons": "^4.4.0",
+    "react-parallax-tilt": "^1.7.42",
     "simple-icons": "^7.1.0",
     "spinners-react": "^1.0.7",
     "three": "^0.141.0",
