--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@fontsource/courier-prime": "^4.5.7",
     "@fontsource/inter": "^4.5.11",
     "@react-three/drei": "^9.13.0",
     "@react-three/fiber": "^8.0.23",
