--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "next": "12.1.6",
     "next-images": "^1.8.4",
     "react": "18.1.0",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "18.1.0",
     "react-icon-cloud": "^4.1.3",
     "react-icons": "^4.4.0",
     "react-parallax-tilt": "^1.7.42",
+    "react-use-downloader": "^1.1.7",
     "simple-icons": "^7.1.0",
     "spinners-react": "^1.0.7",
     "three": "^0.141.0",
