--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.4.0",
     "react-parallax-tilt": "^1.7.42",
     "react-use-downloader": "^1.1.7",
+    "rough-notation": "^0.5.1",
     "simple-icons": "^7.1.0",
     "spinners-react": "^1.0.7",
     "three": "^0.141.0",
