--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@emotion/styled": "^11.9.3",
     "@fontsource/courier-prime": "^4.5.7",
     "@fontsource/inter": "^4.5.11",
-    "@react-three/drei": "^9.13.0",
+    "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.0.23",
-    "@splinetool/loader": "^0.9.68",
-    "@splinetool/r3f-spline": "^1.0.1",
+    "@splinetool/loader": "^0.9.138",
+    "@splinetool/r3f-spline": "^1.0.2",
     "@splinetool/react-spline": "^2.2.1",
+    "@uploadcare/nextjs-loader": "^0.4.0",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
     "next-images": "^1.8.4",
+    "next-progress": "^2.2.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.1.0",
     "react-doc-viewer": "^0.1.5",
     "react-dom": "18.1.0",
